Fix word-wrap in notifications area in Safari

--- a/specifyweb/frontend/js_src/css/notifications.css
+++ b/specifyweb/frontend/js_src/css/notifications.css
@@ -1,5 +1,9 @@
 /* notifications.css */
 
+#site-notifications {
+  white-space: pre;
+}
+
 #site-notifications[disabled] {
     color: var(--t1);
 }
